[CSD] Tiled mode on GTK/mutter shows round corners and unnecessary space
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox73 | --- | fixed |
People
(Reporter: zdaniel.gp, Assigned: stransky)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
When using CSD and you choose to tile the windows on GNOME/Mutter, the default behavior that most GTK applications do is have sharp edges. However, on Firefox, we see round edges as shown in the attached screenshot as the blue arrow.
I'm trying to tile windows side-by-side using GNOME/Mutter tiling feature.
Actual results:
When Firefox is tiled, it displays a round corner, as shown by screenshot with the blue arrow (1) as well as an unnecessary leading space before the tabs (2).
None of that happens when CSD is disabled.
Expected results:
The common behavior for GTK applications with CSD on GNOME is that when tiled, they should draw the titlebar similarly when maximized: no round edges nor leading spaces for tabs. This is to keep consistency with the desktop experience (see: https://pasteboard.co/IsAOrAn.png)
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Description
•