Bug 1573742 [Linux] Don't draw round corners in tiled mode, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D56601

--HG--
extra : moz-landing-system : lando